2005-03-13  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-RC3-b3

	* Fix: Unquoted array refs, global scope issues, html comments 
	  surrounding script tags.

2005-03-12  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-RC3-b2

	* Fix: Attempt to address phpBB unset()ing the op/name/modload vars
	  before we use them by not setting them until after we include
	  phpBB's files.

2005-03-12  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-RC3-b1

	* Fix: Unset array ref in do_command

	* Fix: Correct view album div sizes in situations where the thumbnail 
	  size is zero or blank.

	* Fix: session_test wasn't referencing 'destroy' from $_REQUEST

	* Fix: Update phpBB instructions to include new CSS file

2005-03-10  Jens A. Tkotz <jens@peino.de>  1.5-cvs-RC2-b32

	* Fix: Removed linebreak in translateable text.

	* Fix: Test for sending mail to new users failed, was sending anyway.

2005-03-09  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC2-cvs-b31

	* Fix: Only try to watermark if the item isn't an album or a movie

2005-03-09  Jens A. Tkotz <jens@peino.de>  1.5-cvs-RC2-b30

	* Updated Copyrights to 2005.

2005-03-06  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC2-cvs-b29

	* Change: PhotoWorks URL needed updating

2005-03-06  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC2-cvs-b28

	* Fix: Make sure that the 'Hey! Upload some photos!' link knows it's a popup

2005-03-06  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC2-cvs-b27

	* Change: Add 'validate_albums.php' to assist with migration to
	  Gallery 2.0

	* Change: Add validate albums to the admin page

2005-03-03  Jens A. Tkotz <jens@peino.de>  1.5-cvs-RC2-b26

	* Fix: Show "See full poll results" link only to admins and owners 
	       otherwise normal users get an errormessage.

2005-03-03  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC2-cvs-b25

	* Fix: Ensure that mail is sent to 'other' users when adding a new
	  subalbum
