@@ -1,3 +1,7 @@
+2005-03-15  Jens A. Tkotz <jens@peino.de>  1.5-cvs-RC3-b4
+
+	* Fix: Added Minimum Headers according to RFC 822 in gallery mail.
+
 2005-03-13  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-RC3-b3
 
 	* Fix: Unquoted array refs, global scope issues, html comments 
